workaround FF display:table-cell bug for popup widget where white corners were being drawn under the rounded ones), workaround Safari timing issue with popup widget where clicking on text with the popup visible would close and immediately reopen the popup

--- a/rb/static/widget-new/src/css/popup-widget.css
+++ b/rb/static/widget-new/src/css/popup-widget.css
@@ -19,7 +19,6 @@
 }
 
 .antenna-popup-body {
-    display: table-cell;
     white-space: nowrap;
     background: #464646;
     padding:8px;
